feat(auth): Implement JWT Authentication and Authorization
This commit introduces a complete JWT-based authentication and authorization system.

Key changes include:
- **JWT Infrastructure:**
    - Configured JWT Bearer authentication in `Program.cs` and `appsettings.json` for token generation and validation.
    - Added `AuthController` with a `/api/Auth/login` endpoint for user authentication and JWT issuance upon successful login.
- **Secure Password Handling:**
    - Updated `PasswordHelper` to use `HMACSHA512` for robust password hashing with unique salts (`CreatePasswordHash` and `VerifyPasswordHash`).
    - Modified `User` entity to store `PasswordHash` and `PasswordSalt` as `byte[]`.
- **GUID ID Implementation:**
    - Transitioned `User` entity `Id` from `int` to `Guid` for improved uniqueness and consistency.
    - Updated `IUserRepository`, `UserRepository`, `IUserService`, `UserService`, and `UserController` to consistently use `Guid` for user IDs.
    - Adjusted routing in `UserController` to expect `Guid` IDs (e.g., `{id:guid}`).
- **DTOs and Service Layer Refinement:**
    - Modified `UserService` to handle password hashing/salting during user creation and verification during password updates.
    - Updated `UserReadDto` to include the `Guid Id`.
    - Ensured `UserCreateDto` and `UserLoginDto` handle password input correctly.
    - Adjusted `UserUpdateDto` to remove password field, separating profile updates from password changes.
- **Localization Enhancements:**
    - Updated DTO validation attributes to use localized messages from `.resx` files, supporting `pt-BR`, `en`, and `es`.
    - Integrated `MessageProvider` for localized error messages in `AuthController`.

These changes establish a secure and robust foundation for user authentication and access control within the Piggino API.

--- a/backend/Piggino.Api/Resources/Messages.en.resx
+++ b/backend/Piggino.Api/Resources/Messages.en.resx
@@ -117,7 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EmailAddress" xml:space="preserve">
+    <value>Invalid email format.</value>
+  </data>
+  <data name="EmailRequired" xml:space="preserve">
+    <value>The email is required.</value>
+  </data>
   <data name="InvalidCredentialsOrUserNotFound" xml:space="preserve">
     <value>Incorrect current password or user not found.</value>
+  </data>
+  <data name="NameLength" xml:space="preserve">
+    <value>The name must be between {2} and {1} characters long.</value>
+  </data>
+  <data name="NameRequired" xml:space="preserve">
+    <value>The name is required.</value>
+  </data>
+  <data name="PasswordLength" xml:space="preserve">
+    <value>The password must be between {2} and {1} characters long.</value>
+  </data>
+  <data name="PasswordRequired" xml:space="preserve">
+    <value>The password is required.</value>
+  </data>
+  <data name="Required" xml:space="preserve">
+    <value>{0} is required.</value>
+  </data>
+  <data name="StringLength" xml:space="preserve">
+    <value>{0} must be between {2} and {1} characters long.</value>
   </data>
 </root>
