--- a/backend/Piggino.Api/Resources/Messages.resx
+++ b/backend/Piggino.Api/Resources/Messages.resx
@@ -117,7 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EmailAddress" xml:space="preserve">
+    <value>Formato de email inválido.</value>
+  </data>
+  <data name="EmailRequired" xml:space="preserve">
+    <value>O email é obrigatório.</value>
+  </data>
   <data name="InvalidCredentialsOrUserNotFound" xml:space="preserve">
     <value>Senha atual incorreta ou usuário não encontrado.</value>
+  </data>
+  <data name="NameLength" xml:space="preserve">
+    <value>O nome deve ter entre {2} e {1} caracteres.</value>
+  </data>
+  <data name="NameRequired" xml:space="preserve">
+    <value>O nome é obrigatório.</value>
+  </data>
+  <data name="PasswordLength" xml:space="preserve">
+    <value>A senha deve ter entre {2} e {1} caracteres.</value>
+  </data>
+  <data name="PasswordRequired" xml:space="preserve">
+    <value>A senha é obrigatória.</value>
+  </data>
+  <data name="Required" xml:space="preserve">
+    <value>{0} é obrigatório.</value>
+  </data>
+  <data name="StringLength" xml:space="preserve">
+    <value>{0} deve ter entre {2} e {1} caracteres.</value>
   </data>
 </root>
